// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders BlockComponent with a class 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#efeff4",
        "justifyContent": "center",
        "paddingBottom": 10,
        "paddingLeft": 10,
        "paddingRight": 10,
        "paddingTop": 10,
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <Text
      classColor="Red"
      ellipsizeMode="middle"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#c93a3a",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontSize": 25,
            "fontWeight": "bold",
            "textAlign": "left",
          },
        ]
      }
    >
      No Name
    </Text>
    <View
      doFlex={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
              "paddingLeft": 5,
              "textAlign": "right",
            },
          ]
        }
      >
        7:30
         - 
        8:30 AM
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
          "marginTop": 5,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "textAlign": "left",
          },
        ]
      }
    >
      No Teacher
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "textAlign": "right",
          },
        ]
      }
    >
      No Room
    </Text>
  </View>
</View>
`;

exports[`Renders BlockComponent with a free 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#efeff4",
        "justifyContent": "center",
        "paddingBottom": 10,
        "paddingLeft": 10,
        "paddingRight": 10,
        "paddingTop": 10,
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <Text
      classColor="No Color"
      ellipsizeMode="middle"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#999999",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontSize": 25,
            "fontWeight": "bold",
            "textAlign": "left",
          },
        ]
      }
    >
      Free
    </Text>
    <View
      doFlex={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
              "paddingLeft": 5,
              "textAlign": "right",
            },
          ]
        }
      >
        7:30
         - 
        8:30 AM
      </Text>
    </View>
  </View>
</View>
`;

exports[`Tests different variations of classes Renders LunchBlockComponent with a class 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#efeff4",
          "justifyContent": "center",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#444444",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }
      >
        Lunch
      </Text>
      <View
        doFlex={false}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
                "paddingLeft": 5,
                "textAlign": "right",
              },
            ]
          }
        >
          10:55
           - 
          11:22 AM
        </Text>
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#efeff4",
          "justifyContent": "center",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        classColor="Red"
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#c93a3a",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }
      >
        No Name
      </Text>
      <View
        doFlex={false}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
                "paddingLeft": 5,
                "textAlign": "right",
              },
            ]
          }
        >
          11:25
           - 
          12:22 PM
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
            "marginTop": 5,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "textAlign": "left",
            },
          ]
        }
      >
        No Teacher
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "textAlign": "right",
            },
          ]
        }
      >
        No Room
      </Text>
    </View>
  </View>,
]
`;

exports[`Tests different variations of classes Renders LunchBlockComponent with a free 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#efeff4",
          "justifyContent": "center",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        classColor="Purple"
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#8848ad",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }
      >
        Free
      </Text>
      <View
        doFlex={true}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
                "paddingLeft": 5,
                "textAlign": "right",
              },
            ]
          }
        >
          10:55
           - 
          11:22 AM
        </Text>
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#efeff4",
          "justifyContent": "center",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#444444",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }
      >
        Lunch
      </Text>
      <View
        doFlex={false}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
                "paddingLeft": 5,
                "textAlign": "right",
              },
            ]
          }
        >
          11:25
           - 
          11:52 AM
        </Text>
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#efeff4",
          "justifyContent": "center",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        classColor="Purple"
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#8848ad",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 25,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }
      >
        Free
      </Text>
      <View
        doFlex={true}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#808080",
                "paddingLeft": 5,
                "textAlign": "right",
              },
            ]
          }
        >
          11:55
           - 
          12:22 PM
        </Text>
      </View>
    </View>
  </View>,
]
`;
